changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JAMstack Image Optimisation",
+  "name": "jamstack-image-ptimization",
   "private": true,
   "description": "Simple starter for Image Optimisation for JAMstack",
   "version": "0.1.0",
